adding source to client
