# app/src/routes/routes.js
@@ -263,7 +263,12 @@ module.exports = function(koarouter, controllers, koaconvert, papersConfig) {
          *       200:
          *         description: Success
          *         schema:
-         *             $ref: "#/definitions/auth"
+         *             $ref: "#/definitions/standardSuccessResponse"
+         *       422:
+         *         description: Failure
+         *         schema:
+         *             $ref: "#/definitions/standardFailureResponse"
+         *
          */
         router.post("/client/addClient", controllers.clientController.addClient);
         /**
